*feature) for fydeos anbox

--- a/app-emulation/anbox/files/anbox-init.conf
+++ b/app-emulation/anbox/files/anbox-init.conf
@@ -8,5 +8,6 @@ author        "tean@fydeos.io"
 start on started system-services
 
 script
-  anbox-container --daemon --privileged --data-path=/mnt/stateful_partition/var_overlay/lib/anbox
+  #anbox-container --daemon --privileged --data-path=/mnt/stateful_partition/var_overlay/lib/anbox
+  anbox-container /mnt/stateful_partition/var_overlay/lib/anbox
 end script
