*hotfix) add rootfs path

--- a/app-emulation/anbox/files/anbox-init.conf
+++ b/app-emulation/anbox/files/anbox-init.conf
@@ -8,5 +8,5 @@ author        "tean@fydeos.io"
 start on started system-services
 
 script
-  anbox-container /opt/google/containers/anbox
+  anbox-container /opt/google/containers/anbox /mnt/stateful_partition/var_overlay/lib/anbox
 end script
