*hotfix) add network hook script

--- a/app-emulation/anbox/files/config.json
+++ b/app-emulation/anbox/files/config.json
@@ -302,6 +302,13 @@
       ]
     }
   ],  
+  "hooks": {
+    "prechroot": [
+			{
+				"path": "/opt/google/containers/anbox/runc_hook.sh"
+			}
+		]
+  },
   "linux": {
     "altSyscall": "android",
     "cgroupsPath": "/session_manager_containers",
